Removed redundant cv field - it is replaced by UploadType.cv
Removed unused methods from candidate portal candidate attachment service.

Removed double definition of UploadType.

createCandidateAttachment can throw IOException.